# lime-pet

./: .gitignore  Package.swift  README.md
.github/workflows/: ci.yml  release.yml
LimePet/: CompanionProtocol.swift  Info.plist  LimePetApp.swift  PetCharacterLibrary.swift  PetCharacterRenderer.swift  PetCompanionDiagnostics.swift  PetConversationPrompt.swift  PetIPCClient.swift  PetLive2D.swift  PetModelCatalog.swift  PetPlacement.swift  PetRenderSurface.swift  PetRuntime.swift  PetSpeechCoordinator.swift  PetView.swift
LimePet.xcodeproj/: project.pbxproj
LimePet/Resources/: character-library.json  live2d-model-catalog.json  live2d-model-presets.json
LimePet/Resources/live2d-runtime/: index.html  runtime.js
WindowsPet/: index.html  package-lock.json  package.json
WindowsPet/public/live2d-runtime/: index.html  runtime.js
WindowsPet/scripts/: sync-shared-assets.mjs  sync-version.mjs
WindowsPet/src/: characterLibrary.ts  companionDiagnostics.ts  live2dBridge.ts  main.ts  styles.css  tauriCompat.ts
WindowsPet/src-tauri/: Cargo.toml  tauri.conf.json
WindowsPet/src-tauri/capabilities/: default.json
WindowsPet/src-tauri/src/: lib.rs  main.rs
WindowsPet/src/assets/shared/: character-library.json
docs/: protocol.md  release.md
scripts/: Info.no-xcode.plist  build-app.sh  build-dev-app.sh  check-companion-dev-stack.sh  generate-live2d-character-library.mjs  package-release.sh  run-companion-dev-stack.sh  run-dev-app.sh  sync-app-live2d-assets.mjs
